--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "mpvue": "^1.0.11"
+    "mpvue": "^1.0.11",
+    "stylus": "^0.54.5"
   },
   "devDependencies": {
     "mpvue-loader": "^1.0.13",
